
	* flow.c (regs_live_at_setjmp): Make it static.
	* flow.h: Remove the corresponding prototype.

	* reload1.c (reload_startobj, reload_firstobj,
	something_needs_operands_changed, reload_inherited,
	reload_inheritance_insn, reload_override_in,
	reload_spill_index): Make them static.

	* recog.c (verify_changes): Make it static.
	* recog.h: Remove the corresponding prototype.

2005-03-07  David Billinghurst <David.Billinghurst@riotinto.com>

	* config/i386/cygwin1.c(mingw_scan): Use xstrdup in calls to putenv.

2005-03-07  Joseph S. Myers  <joseph@codesourcery.com>

	* config/ia64/hpux.h (LINK_SPEC): Add -z.
	* config/ia64/ia64.c (ia64_function_value): Return a REG not a
	PARALLEL for an empty structure.

2005-03-07  Kazu Hirata  <kazu@cs.umass.edu>

	* fold-const.c (fold_binary): Remove handling of RANGE_EXPR.

	* fold-const.c (fold_binary): Unroll the very first "for"
	loop.

2005-03-06  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/predicates.md (branch_comparison_operator): Remove
	redundant match_code test.
	(scc_comparison_operator): Swap match_operand and match_code
	tests.
	(branch_positive_comparison_operator): Same.
	(trap_comparison_operator): Use comparison_operator and swap with
	match_code test.

2005-03-06  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	PR target/20288
	* config/avr/avr.c (print_operand): Add 'p' and 'r'.
	(out_movhi_r_mr): Read low byte of volatile MEM first.
	(out_movhi_mr_r): Write high byte of volatile MEM first.

2005-03-05  Kazu Hirata  <kazu@cs.umass.edu>

	* cselib.c (reg_values, reg_values_size): Make them static.

	* cse.c (cse_reg_info_table): Make it static.

	* fold-const.c (fold_unary): Use build1 instead of copy_node.

2005-03-06  Zdenek Dvorak  <dvorakz@suse.cz>

	* cse.c (find_best_addr): Use canon_for_address.

2005-03-06  Kazu Hirata  <kazu@cs.umass.edu>

	* cse.c (fold_rtx_subreg, fold_rtx_mem): New.
	(fold_rtx): Call fold_rtx_subreg and fold_rtx_mem to handle
	SUBREG and MEM, respectively.
